gccida/g2/print_stack
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_stack/src/reg-stack.c:2832:19: error: use of undeclared identifier 'stru_6F109F'
fwrite( ( char *)&stru_6F109F._chain + 2, 1uLL, 2uLL, file); 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/print_stack/src/obj/reg-stack.o] Error 1
